--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -503,6 +503,16 @@ body, button {
     font-weight: bold;
 }
 
+#loginNonPremium {
+    font-family: 'Avenir Medium';
+    margin-bottom: 15px;
+    font-size: 10px;
+    letter-spacing: 1px;
+    font-weight: bold;
+    text-shadow: 0px 1px black;
+    color: red;
+}
+
 /* Container to organize login field elements. */
 .loginFieldContainer {
     position: relative;
@@ -2676,7 +2686,7 @@ input:checked + .toggleSwitchSlider:before {
     height: 70px;
     width: auto;
     position: relative;
-    border: 2px solid white;
+    /*border: 2px solid white;*/
     box-sizing: border-box;
     border-radius: 50%;
 }
@@ -2686,7 +2696,7 @@ input:checked + .toggleSwitchSlider:before {
     position: relative;
     height: 70px;
     width: 70px;
-    border-radius: 50%;
+    /*border-radius: 50%;*/
     margin-top: 50px;
 }
 
