Rebrand to SkyMon

--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -278,7 +278,7 @@
                 <div id="settingsAboutCurrentContent">
                     <div id="settingsAboutCurrentHeadline">
                         <img id="settingsAboutLogo" src="./assets/images/SealCircle.png">
-                        <span id="settingsAboutTitle">MonCraft Launcher</span>
+                        <span id="settingsAboutTitle">SkyMon Launcher</span>
                     </div>
                     <div id="settingsAboutCurrentVersion">
                         <div id="settingsAboutCurrentVersionCheck">&#10003;</div>
@@ -292,10 +292,10 @@
                     </div>
                 </div>
                 <div id="settingsAboutButtons">
-                    <a href="https://github.com/maks666999/MonCraftLauncher" id="settingsAboutSourceButton" class="settingsAboutButton">Źródło (GitHub)</a>
+                    <a href="https://github.com/maks666999/SkyMonLauncher" id="settingsAboutSourceButton" class="settingsAboutButton">Źródło (GitHub)</a>
                     <!-- The following must be included in third-party usage. -->
                     <a href="https://github.com/dscalzi/HeliosLauncher" id="settingsAboutSourceButton" class="settingsAboutButton">Oryginalne Źródło (GitHub)</a>
-                    <a href="https://github.com/maks666999/MonCraftLauncher/issues" id="settingsAboutSupportButton" class="settingsAboutButton">Pomoc</a>
+                    <a href="https://github.com/maks666999/SkyMonLauncher/issues" id="settingsAboutSupportButton" class="settingsAboutButton">Pomoc</a>
                     <a href="#" id="settingsAboutDevToolsButton" class="settingsAboutButton">DevTools Console</a>
                 </div>
             </div>
