--- a/app/welcome.ejs
+++ b/app/welcome.ejs
@@ -5,7 +5,7 @@
     </div>-->
     <div id="welcomeContent">
         <img id="welcomeImageSeal" src="assets/images/SealCircle.png"/>
-        <span id="welcomeHeader">MonCraft Launcher</span>
+        <span id="welcomeHeader">SkyMon Launcher</span>
         <span id="welcomeDescription">Twój serwer pixelmon :)</span>
         <br>
         <span id="welcomeDescCTA">Zostało kilka kliknięc do wejścia na serwer!</span>
