--- a/app/login.ejs
+++ b/app/login.ejs
@@ -58,7 +58,7 @@
                     <a href="https://minecraft.net/en-us/store/minecraft/">Kup Minecraft!</a>
                 </span>
                 <p class="loginDisclaimerText">Twoje hasło jest wysłane prosto do mojang i nigdzie go nie zapisujemy.</p>
-                <p class="loginDisclaimerText">MonCraft Launcher nie jest związane z Mojang AB.</p>
+                <p class="loginDisclaimerText">SkyMon Launcher nie jest związane z Mojang AB.</p>
             </div>
         </form>
     </div>
